kustomize/base/passport-status-api/passport-status-api-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: passport-status-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: passport-status-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: passport-status-api
    spec:
      serviceAccountName: passport-status-api
      containers:
        - name: passport-status-api
          image: dtsdevcontainers.azurecr.io/passport-status-api
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 30
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 10" ]
          volumeMounts:
            - name: config
              mountPath: /workspace/BOOT-INF/classes/application-local.yaml
              subPath: application.yaml
      volumes:
        - name: config
          configMap:
            name: passport-status-api
