kustomize/base/passport-status-api/passport-status-api-ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-passport-status-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: azure/application-gateway
    # see https://azure.github.io/application-gateway-kubernetes-ingress/annotations/
    appgw.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: passport-status-api
                port:
                  name: http

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-passport-status-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: passport-status-api
                port:
                  name: http
